Use ZGC collector in dev on Java 21+